tests/ui/lifetimes/closure-lifetime-bounds-10291.stderr
error: lifetime may not live long enough
  --> $DIR/closure-lifetime-bounds-10291.rs:5:9
   |
LL | fn test<'x>(x: &'x isize) {
   |         -- lifetime `'x` defined here
LL |     drop::<Box<dyn for<'z> FnMut(&'z isize) -> &'z isize>>(Box::new(|z| {
LL |         x
   |         ^ returning this value requires that `'x` must outlive `'static`

error: aborting due to 1 previous error

